src/app/components/footer/footer.component.css
footer {
  margin-bottom: 20px;
  text-align: center;
  align-items: center;
}

.box {
  justify-content: center;
  align-content: center;
}

.socials {
  width: 120px;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
}

.socials a {
  width: 50px;
  height: 50px;
  font-size: 24px;
  margin: 8px;
  padding: 8px;
}

.socials a:hover {
  background-color: whitesmoke;
  border-radius: 48px;
  cursor: pointer;
}

